--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,8 +9,19 @@ services:
   app-web:
     container_name: app-web
     image: ghcr.io/aicalendar/app-web:dev-latest
+
+  api-user-service:
+    container_name: api-user-service
+    image: ghcr.io/aicalendar/api-user-service:dev-latest
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro  # Mount the custom Nginx config
     ports:
-      - 80:80
+      - "80:80"
+
   database:
     container_name: database
     image: postgres:17.2-bookworm
@@ -24,5 +35,6 @@ services:
       - 5432:5432
     volumes:
       - database_data:/var/lib/postgresql/data
+
 volumes:
   database_data:  
