--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -20,6 +20,13 @@ services:
     build:
       context: ${API_USER_SERVICE_REL_PATH}
       dockerfile: DockerfileDev
+    env_file: .dev.env
+    environment:
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
     volumes:
       - ${API_USER_SERVICE_REL_PATH}:/app  
 
@@ -35,7 +42,7 @@ services:
     container_name: database
     image: postgres:17.2-bookworm
     restart: always
-    env_file: .env
+    env_file: .dev.env
     environment:
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
