changed redis password

--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -26,8 +26,9 @@ services:
       DB_NAME: ${DB_NAME}
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
-      REDIS_PORT: ${REDIS_PORT}
       REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
     volumes:
       - ${API_USER_SERVICE_REL_PATH}:/app  
 
@@ -55,9 +56,10 @@ services:
   redis:
     container_name: redis
     image: redis:7.4.2-alpine
-    command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
-    volumes:
-      - ./redis.conf:/usr/local/etc/redis/redis.conf:ro
+    command: >
+      sh -c "redis-server --requirepass $$REDIS_PASSWORD"
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
     ports:
       - ${REDIS_PORT}:${REDIS_PORT}
 
