--- a/docker/.dev.env.example
+++ b/docker/.dev.env.example
@@ -1,5 +1,13 @@
+DB_HOST= #probably shoud be 'docker'
+DB_PORT=
 DB_NAME=
 DB_USER=
 DB_PASSWORD=
+
+REDIS_PORT=
+REDIS_HOST=
+REDIS_PASSWORD=
+
 WEB_APP_REL_PATH=
 API_USER_SERVICE_REL_PATH=
+
