--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,10 +13,19 @@ services:
   api-user-service:
     container_name: api-user-service
     image: ghcr.io/aicalendar/api-user-service:dev-latest
+    environment:
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
 
   nginx:
-    image: nginx:latest
     container_name: nginx
+    image: nginx:latest
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro  # Mount the custom Nginx config
     ports:
@@ -26,15 +35,24 @@ services:
     container_name: database
     image: postgres:17.2-bookworm
     restart: always
-    env_file: .env
     environment:
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
     ports:
-      - 5432:5432
+      - ${DB_PORT}:${DB_PORT}
     volumes:
       - database_data:/var/lib/postgresql/data
+
+  redis:
+    container_name: redis
+    image: redis:7.4.2-alpine
+    command: >
+      sh -c "redis-server --requirepass $$REDIS_PASSWORD"
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+    ports:
+      - ${REDIS_PORT}:${REDIS_PORT}
 
 volumes:
   database_data:  
