Redis using compose (#3)
* configured redis with envs and api integration

* changed redis password

* updated env examples

* updated docker compose for redis

--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -20,19 +20,21 @@ services:
     build:
       context: ${API_USER_SERVICE_REL_PATH}
       dockerfile: DockerfileDev
-    env_file: .dev.env
     environment:
       DB_HOST: ${DB_HOST}
       DB_PORT: ${DB_PORT}
       DB_NAME: ${DB_NAME}
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
     volumes:
       - ${API_USER_SERVICE_REL_PATH}:/app  
 
   nginx:
-    image: nginx:latest
     container_name: nginx
+    image: nginx:latest
     volumes:
       - ./nginx.dev.conf:/etc/nginx/nginx.conf:ro  # Mount the custom Nginx config
     ports:
@@ -42,15 +44,24 @@ services:
     container_name: database
     image: postgres:17.2-bookworm
     restart: always
-    env_file: .dev.env
     environment:
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
     ports:
-      - 5432:5432
+      - ${DB_PORT}:${DB_PORT}
     volumes:
       - database_data:/var/lib/postgresql/data
+
+  redis:
+    container_name: redis
+    image: redis:7.4.2-alpine
+    command: >
+      sh -c "redis-server --requirepass $$REDIS_PASSWORD"
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+    ports:
+      - ${REDIS_PORT}:${REDIS_PORT}
 
 volumes:
   database_data:  
