--- a/docker/nginx.dev.conf
+++ b/docker/nginx.dev.conf
@@ -15,8 +15,9 @@ http{
       proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /api-user-service/ {
+    location /api/users/ {
       proxy_pass http://api-user-service;  # Redirect traffic to API 1
+      rewrite ^/api/(.*)$ /$1 break;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
