--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -25,7 +25,7 @@ services:
 
   nginx:
     container_name: nginx
-    image: nginx:latest
+    image: nginx:1.27.4-alpine
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro  # Mount the custom Nginx config
     ports:
@@ -33,7 +33,7 @@ services:
 
   database:
     container_name: database
-    image: postgres:17.2-bookworm
+    image: postgres:17.3-alpine
     restart: always
     environment:
       POSTGRES_DB: ${DB_NAME}
