--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,12 +3,20 @@ events {
 }
 
 http{
+  upstream app-web {
+    server 10.0.0.189;
+  }
+
+  upstream user-service {
+    server 10.0.0.243;
+  }
+
   server {
     listen 80;
     server_name _;
 
     location / {
-      proxy_pass http://10.0.0.189;  # Redirect traffic to web app
+      proxy_pass http://app-web;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -16,7 +24,7 @@ http{
     }
 
     location /api/users/ {
-      proxy_pass http://10.0.0.243;  # Redirect traffic to API 1
+      proxy_pass http://user-service;
       rewrite ^/api/(.*)$ /$1 break;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
