--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -23,6 +23,19 @@ services:
       REDIS_PORT: ${REDIS_PORT}
       REDIS_PASSWORD: ${REDIS_PASSWORD}
 
+  api-event-service:
+    container_name: api-event-service
+    image: ghcr.io/aicalendar/api-event-service:dev-latest
+    environment:
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+
   nginx:
     container_name: nginx
     image: nginx:1.27.4-alpine
