--- a/docker/nginx.dev.conf
+++ b/docker/nginx.dev.conf
@@ -5,10 +5,10 @@ events {
 http{
   server {
     listen 80;
-    server_name localhost;  # Replace with your actual domain name or IP
+    server_name localhost;
 
     location / {
-      proxy_pass http://app-web:3000;  # Redirect traffic to your web app
+      proxy_pass http://app-web:3000;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -16,12 +16,20 @@ http{
     }
 
     location /api/users/ {
-      proxy_pass http://api-user-service;  # Redirect traffic to API 1
+      proxy_pass http://api-user-service;
       rewrite ^/api/(.*)$ /$1 break;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
     }
+
+    location /api/events/ {
+      proxy_pass http://api-event-service;
+      rewrite ^/api/(.*)$ /$1 break;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
   }
 }
