--- a/docker/.dev.env.example
+++ b/docker/.dev.env.example
@@ -8,6 +8,8 @@ REDIS_PORT=
 REDIS_HOST=
 REDIS_PASSWORD=
 
+OPENAI_KEY=
+
 WEB_APP_REL_PATH=
 API_USER_SERVICE_REL_PATH=
 API_EVENT_SERVICE_REL_PATH=
