--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -46,6 +46,7 @@ services:
       REDIS_HOST: ${REDIS_HOST}
       REDIS_PORT: ${REDIS_PORT}
       REDIS_PASSWORD: ${REDIS_PASSWORD}
+      OPENAI_KEY: ${OPENAI_KEY}
     volumes:
       - ${API_EVENT_SERVICE_REL_PATH}:/app  
 
